# ssa

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run_pipeline.py
ai/: TECHNICAL_DESIGN.md  python_reference.md  social_science_research_automation.md
archived_runs/: run_history.json
archived_runs/run_01/: run_metadata.json
archived_runs/run_02/: run_metadata.json
archived_runs/run_03/: run_metadata.json
archived_runs/run_04/: run_metadata.json
archived_runs/run_05/: run_metadata.json
archived_runs/run_06/: run_metadata.json
archived_runs/run_07/: run_metadata.json
archived_runs/run_08/: run_metadata.json
archived_runs/run_09/: run_metadata.json
archived_runs/run_10/: run_metadata.json
archived_runs/run_11/: run_metadata.json
archived_runs/run_12/: run_metadata.json
archived_runs/run_13/: run_metadata.json
archived_runs/run_14/: run_metadata.json
archived_runs/run_15/: run_metadata.json
archived_runs/run_16/: run_metadata.json
archived_runs/run_17/: run_metadata.json
archived_runs/run_18/: run_metadata.json
archived_runs/run_19/: run_metadata.json
archived_runs/run_20/: run_metadata.json
archived_runs/run_21/: run_metadata.json
config/: llm_config.yaml
outputs/: analysis_report.md  dynamic_analysis_report.md  dynamic_paper.tex  dynamic_references.bib  paper.tex  references.bib
spec/: research.yaml
src/: analysis.py  generate_and_execute_analysis.py  generate_paper.py  generate_research_ideas.py  llm_client.py  pipeline_base.py  run_dynamic_pipeline.py  terminal_formatter.py
(+33 files in other folders)
