[project]
name = "ssa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "pypdf2>=3.0.0",
    "claude-code-sdk>=0.0.17",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.4",
]
